Update title and logo

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -3,7 +3,7 @@ html lang='en'
   head
     meta charset="utf-8"
     meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    title World Cup 2018
+    title Euro 2020
     = csrf_meta_tags
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
@@ -14,7 +14,7 @@ html lang='en'
       .container
         nav.navbar.navbar-expand-lg.navbar-light.rounded-bottom
           a.navbar-brand href=root_path
-            = image_tag 'wc_logo.jpg', class: 'navbar-logo'
+            = image_tag 'ec_logo.png', class: 'navbar-logo'
           button.navbar-toggler type="button" data-toggle="collapse" data-target="#navLinks" aria-controls="navLinks" aria-expanded="false" aria-label="Toggle navigation"
             span.navbar-toggler-icon
           #navLinks.collapse.navbar-collapse
