--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -14,7 +14,7 @@ html lang='en'
       .container
         nav.navbar.navbar-expand-lg.navbar-light.rounded-bottom
           a.navbar-brand href=root_path
-            = image_tag 'ec_logo.png', class: 'navbar-logo'
+            = image_tag 'Qc2022.png', class: 'navbar-logo'
           button.navbar-toggler type="button" data-toggle="collapse" data-target="#navLinks" aria-controls="navLinks" aria-expanded="false" aria-label="Toggle navigation"
             span.navbar-toggler-icon
           #navLinks.collapse.navbar-collapse
